# knowsql

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: build.yml  build_and_deploy_docs.yml  build_and_push_docker.yml  build_binary.yml  check.yml  main.yml  pull_request.yml
crates/knowsql_bitcask/: Cargo.toml
crates/knowsql_bitcask/src/: entry.rs  lib.rs
crates/knowsql_parser/: Cargo.toml
crates/knowsql_parser/src/: command.rs  lib.rs  resp2.rs  simple.rs
crates/knowsql_parser/src/protocol/: resp2.rs
docs/: book.toml
docs/src/: SUMMARY.md  installation.md
docs/src/installation/: docker.md  nix-nixos.md
docs/theme/: highlight.js
knowsql/: Cargo.toml
knowsql/src/: command.rs  config.rs  lib.rs  main.rs
src/: bitcask.rs  lib.rs
src/knowsql/src/: config.rs  main.rs
src/knowsql_bitcask/: Cargo.toml
src/knowsql_bitcask/src/: entry.rs  lib.rs
src/knowsql_parser/: Cargo.toml
src/knowsql_parser/src/: command.rs  resp2.rs  simple.rs
src/knowsql_parser/src/protocol/: mod.rs
src/knowsql_server/: Cargo.toml
tests/: basic.nix  over9000.nix  pipelined.nix  remote.nix  restart.nix
