[workspace]
resolver = "2"
members = [
    "src/*",
]

[workspace.package]
version = "0.0.1"
authors = ["gdwr <gregory.dwr@gmail.com>"]
documentation = "https://github.com/gdwr/knowsql"

[workspace.dependencies]
knowsql_bitcask = { path = "./src/knowsql_bitcask" }
knowsql_parser = { path = "./src/knowsql_parser" }

chrono = "0.4.34"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
nom = "7.1.3"
tracing = "0.1.40"
