[package]
name = "knowsql"
version = "0.1.0"
edition = "2021"

[dependencies]
knowsql_bitcask = { workspace = true }
knowsql_parser = { workspace = true }

chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
